# wasm-demos

./: index.html  readme.md
cpp-0-bare/: README.md
cpp-1-embind/: .gitignore  build.sh  index.html  lerp.mjs  lerp.wasm  readme.md
cpp-2-hello-cgal/: cgal.mjs  cgal.wasm  index.html  makefile
cpp-3-cgal-tin/: .gitignore  file.js  files.js  index.html  makefile  readme.md  tin.cpp  tin.js  tin.wasm
cpp-4-las-demo/: index.html  readme.md
cpp-4-las-demo/las/: laszip64.js  laszip64.wasm
cpp-cgal/: .gitignore  CMakeLists.txt  a.out.wasm  build-2.sh  build-3.sh  build-4.sh  build-cpp.sh  cgal-demo  cgal.cpp  index.html  makefile  readme.md  wasm.sh
cpp-embind/: build.sh  lerp.cpp
cpp-old/: .gitignore  CMakeLists.txt  README.md  TODO  make.sh  makefile
cpp-old/public/: demo.js  demo.wasm  index.html  lib.js  lib.wasm
cpp-old/scripts/: run-cgal.sh  run.sh
cpp-old/src/: main.cpp
cpp-old/test/: cube.cpp  hello.cpp  lib.cpp
rust/: Cargo.toml  readme.md
rust/src/: lib.rs
rust/www/: index.html  index.js  package-lock.json  package.json
sample-data/: zeeland.xyz
